--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,23 @@
+# basic stuff
+*.com
 *.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+*.dll
+*.exe
+*.o
+*.so
+*.7z
+*.dmg
+*.gz
+*.iso
 *.jar
-*.war
-*.ear
+*.rar
+*.tar
+*.zip
+*.mvn
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# idea
+*.iml
+*.idea
+
+# folders
+/target
