--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
 			<version>4.12</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.truth</groupId>
+			<artifactId>truth</artifactId>
+			<version>0.31</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
