Adds CSV file of monsters and stores in database
Implements database with Spring Data backed by H2DB.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-jpa:
-  driverClass: 'org.hsqldb.jdbcDriver'
-  jdbcUrl: 'jdbc:hsqldb:mem://monsterDb'
-  userName: 'sa'
+spring:
+  jpa:
+    hibernate:
+      ddl-auto: 'create-drop'
 
 
 
